--- a/style.css
+++ b/style.css
@@ -148,5 +148,31 @@ body{
     position: absolute;
     left: 65%;
     top: 80%;
-    
+
+}
+.img img{
+    height: 390px;
+    width: 600px;
+    position: absolute;
+    left: 55%;
+    top: 89%;
+}
+.watch{
+    display: flex;
+    gap: 12px;
+    position: absolute;
+    bottom: -45%;
+    left: 15%;
+    cursor: pointer;
+}
+.watch i{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.3em;
+}
+.watch p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
